--- a/style.css
+++ b/style.css
@@ -13,7 +13,8 @@ h3 {
 }
 
 table {
-    width: 50vw;
+    margin: auto;
+    width: 95vw;
 }
 
 th, td {
@@ -21,6 +22,5 @@ th, td {
 }
 
 p {
-    width: 50vw;
     text-align: justify;
 }
